fixes to renderer + bug fix where engine continuously flicker between mode 0 (dummy mode that will execute a crash)

--- a/src/renderer/src/style/index.module.css
+++ b/src/renderer/src/style/index.module.css
@@ -214,8 +214,8 @@
 .toolbar-button {
     padding: 5px;
     border-radius: 10px;
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
